--- a/proceedings/tr.tex
+++ b/proceedings/tr.tex
@@ -35,8 +35,8 @@
 \end{minipage}%
 \begin{minipage}[t][130pt][t]{0.70\textwidth}%
 \vspace{\fill}%
-\color{white}{\Huge{\textbf{Indiana University}}}\\
-\color{white}{\large{\textbf{Department of Computer Science}}}%
+\color{white}{\Huge{\textbf{University of Cambridge, UK}}}\\
+\color{white}{\large{\textbf{Department of Computer Science and Technology}}}%
 \vspace{30pt}%
 \end{minipage}%
 \end{minipage}}
